# llmcord

./: .gitignore  Dockerfile  README.md  config-example.yaml  config.py  docker-compose.yaml  gemini_live.py  llmcord.py  main.py  pyproject.toml
character_card/: cog.py  spec.py
