[project]
name = "llmcord"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.5.2",
    "httpx>=0.28.1",
    "openai>=1.97.1",
    "pydantic>=2.11.7",
    "pydantic-ai-slim[openai,mcp]>=0.4.7",
    "pyyaml>=6.0.2",
]
